logs/collective.contacts.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ATExtensions'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/Extensions'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/datatype'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/examples'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/field'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/field/record.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/field/record.py", line 129
    raise AttributeError, 'no vocabulary found for %s' %subfield
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/ATExtensions/i18n'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/demotypes'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/profiles/demotypes/types'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/skins'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/emailMask.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/emailMask.py", line 14
    return emailaddress.replace('@',' at ')
                                          ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/formatdemo.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/formatdemo.py", line 18
    print n1
           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/getDisplayView.py'...
***   File "./lib/python3.5/site-packages/Products/ATExtensions/skins/at_extensions/getDisplayView.py", line 11
    return value
    ^
SyntaxError: 'return' outside function

Listing './lib/python3.5/site-packages/Products/ATExtensions/validator'...
Listing './lib/python3.5/site-packages/Products/ATExtensions/widget'...
Compiling './lib/python3.5/site-packages/Products/ATExtensions/widget/smartemail.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (smartemail.py, line 55)
Listing './lib/python3.5/site-packages/Products/AdvancedQuery'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/__init__.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/__init__.py", line 44
    raise ValueError, 'unsupported usage spec: %s' % usage
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AdvancedQuery/doc'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/sorting.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/sorting.py", line 98
    _load = lambda (x1, x2): x2
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products/AdvancedQuery/tests'...
Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/TestBase.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/TestBase.py", line 48
    id = `id`
         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/framework.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/framework.py", line 72
    print 'Unable to locate Testing package.',
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/AdvancedQuery/tests/testAdvancedQuery.py'...
***   File "./lib/python3.5/site-packages/Products/AdvancedQuery/tests/testAdvancedQuery.py", line 76
    for i in range(7,100): self._addObject(folder, i, `i`, None)
                                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.ATExtensions-1.1.egg-info'...
Listing './lib/python3.5/site-packages/Products.AdvancedQuery-3.0.4.egg-info'...
Listing './lib/python3.5/site-packages/collective'...
Listing './lib/python3.5/site-packages/collective/contacts'...
Listing './lib/python3.5/site-packages/collective/contacts/Extensions'...
Listing './lib/python3.5/site-packages/collective/contacts/browser'...
Listing './lib/python3.5/site-packages/collective/contacts/browser/resources'...
Listing './lib/python3.5/site-packages/collective/contacts/browser/templates'...
Listing './lib/python3.5/site-packages/collective/contacts/content'...
Listing './lib/python3.5/site-packages/collective/contacts/i18n'...
Listing './lib/python3.5/site-packages/collective/contacts/interfaces'...
Listing './lib/python3.5/site-packages/collective/contacts/iso3166'...
Compiling './lib/python3.5/site-packages/collective/contacts/iso3166/__init__.py'...
***   File "./lib/python3.5/site-packages/collective/contacts/iso3166/__init__.py", line 36
    return map(lambda (x,y):(y,x),statesOf)
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/collective/contacts/locales'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/de'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/en'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/es'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/fr'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/it'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/nl'...
Listing './lib/python3.5/site-packages/collective/contacts/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/collective/contacts/profiles'...
Listing './lib/python3.5/site-packages/collective/contacts/profiles/default'...
Listing './lib/python3.5/site-packages/collective/contacts/profiles/default/types'...
Listing './lib/python3.5/site-packages/collective/contacts/profiles/uninstall'...
Listing './lib/python3.5/site-packages/collective/contacts/skins'...
Listing './lib/python3.5/site-packages/collective/contacts/skins/collective_contacts'...
Listing './lib/python3.5/site-packages/collective/contacts/tests'...
Listing './lib/python3.5/site-packages/collective/contacts/tests/integration'...
Listing './lib/python3.5/site-packages/collective/contacts/tests/unit'...
Listing './lib/python3.5/site-packages/collective/contacts/upgrades'...
Listing './lib/python3.5/site-packages/collective.contacts-1.5.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
